--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Online Store</title>
   <link rel="stylesheet" href="./styles/style.css">
-
-  <style>
-    .wrapper {
-      width: 790px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
   <main>
